# simonw-blog-reader

./: .env.example  .gitignore  README.md  pyproject.toml
skills/simonw-reader/: SKILL.md
skills/simonw-reader/scripts/: read.sh
src/simonw_reader/: __init__.py  analyzer.py  cli.py  fetch_cli.py  fetcher.py  pipeline.py  tg_bot.py
