[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simonw-blog-reader"
version = "0.1.0"
description = "Reading assistant for Simon Willison's blog: fetch a post, follow its references one level deep, and summarise how each reference supports the original article."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.12",
    "openai>=1.40",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
]

[project.scripts]
simonw-read = "simonw_reader.cli:main"
simonw-read-bot = "simonw_reader.tg_bot:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simonw_reader"]
